# mpas-o-flecsi-2.0

./: .gitlab-ci.yml  CMakeLists.txt  README.md
.gitlab/: environments.yml  templates.yml
apps/: CMakeLists.txt  exmpas.cc
apps/coupler/: CMakeLists.txt  coupler.cc  finalize.cc  initialize.cc  remap.cc
apps/coupler/include/: control.hh  finalize.hh  initialize.hh  options.hh  remap.hh  state.hh
apps/coupler/include/tasks/: copy_fields.hh  init_fields.hh  io.hh
apps/coupler/tasks/: copy_fields.cc  init_fields.cc  io.cc
apps/example/: CMakeLists.txt  exmpas.cc  finalize.hh  initialize.hh  options.hh  state.hh
apps/ocean/: CMakeLists.txt  finalize.cc  finalize.hh  initialize.cc  initialize.hh  run.cc  run.hh  state.hh
apps/ocean/tasks/: init_functions.cc  init_functions.hh  solve.cc  solve.hh  testcase.cc  testcase.hh
apps/sw/: CMakeLists.txt  finalize.cc  finalize.hh  initialize.cc  initialize.hh  run.cc  run.hh  state.hh  sw.cc
apps/sw/tasks/: solve.cc  solve.hh  testcase.cc  testcase.hh
cmake/: mpi.cmake
config/: mpasoflecsi-config.h.in  mpasoflecsi_config.h
devel/: ci
mpasoflecsi/common/: CMakeLists.txt  constants.hh  fields.hh  types.hh
mpasoflecsi/eqns/: CMakeLists.txt  matrix.hh  metrics.hh
mpasoflecsi/io/: CMakeLists.txt  desc.hh  helpers.hh  io_hdf5.hh  state.hh
mpasoflecsi/specialization/: CMakeLists.txt  cartmesh.hh  control.hh  definition.hh  mesh.cc  mesh.hh
mpasoflecsi/tasks/: CMakeLists.txt  io.cc  io.hh  iohelper.hh
mpasoflecsi/util/: CMakeLists.txt  part.hh
spack-repo/: repo.yaml
